--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.10.2"
+        "bootstrap-icons": "^1.10.2",
+        "sweetalert": "^2.1.2"
     }
 }
